docs: update meta

--- a/example/index.html
+++ b/example/index.html
@@ -7,8 +7,13 @@
     <meta name="description" content="Unoist - Easy to use UnoCss" />
     <meta
       name="keywords"
-      content="unoist, unocss,unocss utils,unocss helper,atomic-css,atomic-css-engine,tailwind,windicss,ui"
+      content="unoist,unocss,unocss utils,unocss helper,atomic-css,atomic-css-engine,tailwind,windicss,ui"
     />
+    <meta property="og:description" content="Unoist - Easy to use UnoCss" />
+    <meta property="og:site_name" content="Unoist" />
+    <meta property="og:title" content="unoist" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://unoist.vercel.app" />
     <title>Unoist - Easy to use UnoCss</title>
   </head>
   <body>
